// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyIncompleteRecord Container should display form once record and author loaded 1`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": false,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 410,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  initialValues={Object {}}
  isAuthorLinked={true}
  isNtro={false}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={Object {}}
  recordToFix={null}
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should display form once record and author loaded 2`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": false,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 410,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  hasAnyFiles={true}
  initialValues={
    Object {
      "authorsAffiliation": Array [
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "Topology",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "0",
        },
        Object {
          "affiliation": "UQ",
          "creatorRole": "",
          "disabled": true,
          "nameAsPublished": "Davidson, Robert",
          "orgaff": "The University of Queensland",
          "orgtype": "453989",
          "required": false,
          "uqIdentifier": "79324",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": true,
          "nameAsPublished": "Babbage, John",
          "orgaff": "",
          "orgtype": "",
          "required": false,
          "uqIdentifier": "78691",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "The Brodsky Quartet",
          "orgaff": "National Library",
          "orgtype": "453983",
          "required": false,
          "uqIdentifier": "0",
        },
      ],
      "grants": Array [
        Object {
          "disabled": true,
          "grantAgencyName": "Test 1",
          "grantAgencyType": "453983",
          "grantId": "11111",
        },
        Object {
          "disabled": true,
          "grantAgencyName": "Test 2",
          "grantAgencyType": "454045",
          "grantId": "",
        },
      ],
      "initialContributionStatements": Array [],
      "initialSignificance": Array [],
      "languages": Array [
        "eng",
      ],
    }
  }
  isAuthorLinked={false}
  isNtro={true}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={
    Object {
      "hideAbstract": true,
      "hideAudienceSize": false,
      "hideExtent": true,
      "hideLanguage": true,
      "hidePeerReviewActivity": false,
      "showContributionStatement": true,
      "showSignificance": true,
    }
  }
  recordToFix={
    Object {
      "fez_datastream_info": Array [
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_il_Sogno.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 21457982,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_InterimFile.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 22801248,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_NewLaceSleeves.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 8555060,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_ThreeMenAndABlonde.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 9433819,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_VagueMemories.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 21279891,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_il_Sogno.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_il_Sogno.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_InterimFile.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_InterimFile.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_NewLaceSleeves.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_NewLaceSleeves.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_ThreeMenAndABlonde.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_ThreeMenAndABlonde.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_VagueMemories.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_VagueMemories.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_HCA15UQ352045_press.pdf.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - HCA15UQ352045_press.pdf",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3097,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_UQ_352045.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for PID - UQ:352045",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3705,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "HCA15UQ352045_press.pdf",
          "dsi_embargo_date": null,
          "dsi_label": "Full text - not publicly available",
          "dsi_mimetype": "application/pdf",
          "dsi_open_access": 1,
          "dsi_pid": "UQ:352045",
          "dsi_size": 90504,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "presmd_HCA15UQ352045_press.xml",
          "dsi_embargo_date": null,
          "dsi_label": "",
          "dsi_mimetype": "application/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 1268,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_il_Sogno.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_il_Sogno.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 17822670,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_InterimFile.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_InterimFile.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 31565290,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 7105180,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 7835100,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_VagueMemories.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_VagueMemories.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 14727673,
          "dsi_state": "A",
        },
      ],
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_audience_size": null,
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Topology",
          "rek_author_id": 32023928,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Davidson, Robert",
          "rek_author_id": 32023929,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Babbage, John",
          "rek_author_id": 32023930,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "The Brodsky Quartet",
          "rek_author_id": 32023931,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
      ],
      "fez_record_search_key_author_affiliation_name": Array [
        Object {
          "rek_author_affiliation_name": "",
          "rek_author_affiliation_name_order": 1,
        },
        Object {
          "rek_author_affiliation_name": "The University of Queensland",
          "rek_author_affiliation_name_order": 2,
        },
        Object {
          "rek_author_affiliation_name": "",
          "rek_author_affiliation_name_order": 3,
        },
        Object {
          "rek_author_affiliation_name": "National Library",
          "rek_author_affiliation_name_order": 4,
        },
      ],
      "fez_record_search_key_author_affiliation_type": Array [
        Object {
          "rek_author_affiliation_type": 0,
          "rek_author_affiliation_type_order": 1,
        },
        Object {
          "rek_author_affiliation_type": 453989,
          "rek_author_affiliation_type_order": 2,
        },
        Object {
          "rek_author_affiliation_type": 0,
          "rek_author_affiliation_type_order": 3,
        },
        Object {
          "rek_author_affiliation_type": 453983,
          "rek_author_affiliation_type_order": 4,
        },
      ],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030542,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 79324,
          "rek_author_id_id": 32030543,
          "rek_author_id_lookup": "Robert Davidson",
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 78691,
          "rek_author_id_id": 32030544,
          "rek_author_id_lookup": "John Babbage",
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030545,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
      ],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_creator_contribution_statement": Array [],
      "fez_record_search_key_file_attachment_name": Array [
        Object {
          "rek_file_attachment_name": "ERAUQ352045_il_Sogno.mp3",
          "rek_file_attachment_name_id": 4434701,
          "rek_file_attachment_name_order": 1,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_NewLaceSleeves.mp3",
          "rek_file_attachment_name_id": 4434702,
          "rek_file_attachment_name_order": 2,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_ThreeMenAndABlonde.mp3",
          "rek_file_attachment_name_id": 4434703,
          "rek_file_attachment_name_order": 3,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_VagueMemories.mp3",
          "rek_file_attachment_name_id": 4434704,
          "rek_file_attachment_name_order": 4,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_il_Sogno.mp3.xml",
          "rek_file_attachment_name_id": 4434705,
          "rek_file_attachment_name_order": 5,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_NewLaceSleeves.mp3.xml",
          "rek_file_attachment_name_id": 4434706,
          "rek_file_attachment_name_order": 6,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_ThreeMenAndABlonde.mp3.xml",
          "rek_file_attachment_name_id": 4434707,
          "rek_file_attachment_name_order": 7,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_VagueMemories.mp3.xml",
          "rek_file_attachment_name_id": 4434708,
          "rek_file_attachment_name_order": 8,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_HCA15UQ352045_press.pdf.xml",
          "rek_file_attachment_name_id": 4434709,
          "rek_file_attachment_name_order": 9,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_UQ_352045.xml",
          "rek_file_attachment_name_id": 4434710,
          "rek_file_attachment_name_order": 10,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "HCA15UQ352045_press.pdf",
          "rek_file_attachment_name_id": 4434711,
          "rek_file_attachment_name_order": 11,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "presmd_HCA15UQ352045_press.xml",
          "rek_file_attachment_name_id": 4434712,
          "rek_file_attachment_name_order": 12,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_il_Sogno.flv",
          "rek_file_attachment_name_id": 4434713,
          "rek_file_attachment_name_order": 13,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "rek_file_attachment_name_id": 4434714,
          "rek_file_attachment_name_order": 14,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "rek_file_attachment_name_id": 4434715,
          "rek_file_attachment_name_order": 15,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_VagueMemories.flv",
          "rek_file_attachment_name_id": 4434716,
          "rek_file_attachment_name_order": 16,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
      ],
      "fez_record_search_key_grant_agency": Array [
        Object {
          "rek_grant_agency": "Test 1",
          "rek_grant_agency_order": 1,
        },
        Object {
          "rek_grant_agency": "Test 2",
          "rek_grant_agency_order": 2,
        },
      ],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_agency_type": Array [
        Object {
          "rek_grant_agency_type": "453983",
          "rek_grant_agency_type_order": 1,
        },
      ],
      "fez_record_search_key_grant_id": Array [
        Object {
          "rek_grant_id": "11111",
          "rek_grant_id_order": 1,
        },
      ],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_grant_type": Array [],
      "fez_record_search_key_language": Array [
        Object {
          "rek_language": "eng",
          "rek_language_id": 5577361,
          "rek_language_order": 1,
          "rek_language_pid": "UQ:352045",
          "rek_language_xsdmf_id": 11997,
        },
      ],
      "fez_record_search_key_series": Object {
        "rek_series": "Queensland Music Festival",
        "rek_series_id": 218537,
        "rek_series_pid": "UQ:352045",
        "rek_series_xsdmf_id": 12113,
      },
      "fez_record_search_key_significance": Array [],
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "1 musical performance",
        "rek_total_pages_id": 5822992,
        "rek_total_pages_pid": "UQ:352045",
        "rek_total_pages_xsdmf_id": 11992,
      },
      "rek_created_date": "2015-02-20T14:26:25Z",
      "rek_date": "2013-07-18T00:00:00Z",
      "rek_depositor": 8058,
      "rek_depositor_affiliation": 826,
      "rek_description": null,
      "rek_display_type": 313,
      "rek_display_type_lookup": "Creative Work",
      "rek_formatted_abstract": "Curated and directed by Robert Davidson, this concert is a collaboration by London's Brodsky Quartet and the Australian quintet Topology, focusing on Davidson's rescoring of Elvis Costello's ballet \\"Il Sogno \\" and arrangements of Elvis Costello songs, along with new works by Robert Davidson, John Babbage, Andrew Ford and Bernard Hoey.<br /><br /> The collaboration was intensive and thoroughgoing, and was used as the basis of a study, published in Davidson, \\"Collaborating across musical style boundaries \\" in Barrett (ed), Collaborative Creative Thought and Practice in Music, Ashgate, 2014.<br />",
      "rek_formatted_title": null,
      "rek_object_type": 3,
      "rek_pid": "UQ:352045",
      "rek_subtype": "Live Performance of Creative Work - Music",
      "rek_title": "Il Sogno: Topology and the Brodsky Quartet play Elvis Costello",
      "rek_updated_date": "2019-02-16T01:44:50Z",
      "rek_updated_date_xsdmf_id": 3678,
    }
  }
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should display loading screen on author loading 1`] = `<WithStyles(InlineLoader) />`;

exports[`MyIncompleteRecord Container should display loading screen on record loading 1`] = `<WithStyles(InlineLoader) />`;

exports[`MyIncompleteRecord Container should load all contribution statements and significance for linked admin author 1`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": true,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 79324,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  initialValues={Object {}}
  isAuthorLinked={true}
  isNtro={false}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={Object {}}
  recordToFix={null}
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should load all contribution statements and significance for linked admin author 2`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": true,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 79324,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  hasAnyFiles={true}
  initialValues={
    Object {
      "authorsAffiliation": Array [
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "Topology",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "0",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": false,
          "nameAsPublished": "Davidson, Robert",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "79324",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": true,
          "nameAsPublished": "Babbage, John",
          "orgaff": "",
          "orgtype": "",
          "required": false,
          "uqIdentifier": "78691",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "The Brodsky Quartet",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "0",
        },
      ],
      "grants": Array [],
      "initialContributionStatements": Array [
        Object {
          "rek_creator_contribution_statement": "Test statement",
          "rek_creator_contribution_statement_order": 1,
        },
        Object {
          "rek_creator_contribution_statement": "Missing",
          "rek_creator_contribution_statement_order": 2,
        },
        Object {
          "rek_creator_contribution_statement": "",
          "rek_creator_contribution_statement_order": 3,
        },
        Object {
          "rek_creator_contribution_statement": "Missing",
          "rek_creator_contribution_statement_order": 4,
        },
      ],
      "initialSignificance": Array [
        Object {
          "rek_significance": 454026,
          "rek_significance_order": 1,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 2,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 3,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 4,
        },
      ],
      "languages": Array [
        "eng",
      ],
    }
  }
  isAuthorLinked={true}
  isNtro={true}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={
    Object {
      "hideAbstract": true,
      "hideAudienceSize": false,
      "hideExtent": true,
      "hideLanguage": true,
      "hidePeerReviewActivity": false,
      "showContributionStatement": true,
      "showSignificance": true,
    }
  }
  recordToFix={
    Object {
      "fez_datastream_info": Array [
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_il_Sogno.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 21457982,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_InterimFile.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 22801248,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_NewLaceSleeves.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 8555060,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_ThreeMenAndABlonde.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 9433819,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "ERAUQ352045_VagueMemories.mp3",
          "dsi_embargo_date": null,
          "dsi_label": "Full-text - not publicly available",
          "dsi_mimetype": "audio/mpeg",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 21279891,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_il_Sogno.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_il_Sogno.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_InterimFile.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_InterimFile.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_NewLaceSleeves.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_NewLaceSleeves.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_ThreeMenAndABlonde.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_ThreeMenAndABlonde.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_ERAUQ352045_VagueMemories.mp3.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - ERAUQ352045_VagueMemories.mp3",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3261,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_HCA15UQ352045_press.pdf.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for datastream - HCA15UQ352045_press.pdf",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3097,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "FezACML_UQ_352045.xml",
          "dsi_embargo_date": null,
          "dsi_label": "FezACML security for PID - UQ:352045",
          "dsi_mimetype": "text/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 3705,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "HCA15UQ352045_press.pdf",
          "dsi_embargo_date": null,
          "dsi_label": "Full text - not publicly available",
          "dsi_mimetype": "application/pdf",
          "dsi_open_access": 1,
          "dsi_pid": "UQ:352045",
          "dsi_size": 90504,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "presmd_HCA15UQ352045_press.xml",
          "dsi_embargo_date": null,
          "dsi_label": "",
          "dsi_mimetype": "application/xml",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 1268,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_il_Sogno.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_il_Sogno.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 17822670,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_InterimFile.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_InterimFile.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 31565290,
          "dsi_state": "D",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 7105180,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 7835100,
          "dsi_state": "A",
        },
        Object {
          "dsi_copyright": null,
          "dsi_dsid": "stream_ERAUQ352045_VagueMemories.flv",
          "dsi_embargo_date": null,
          "dsi_label": "stream_ERAUQ352045_VagueMemories.flv",
          "dsi_mimetype": "video/x-flv",
          "dsi_open_access": null,
          "dsi_pid": "UQ:352045",
          "dsi_size": 14727673,
          "dsi_state": "A",
        },
      ],
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_audience_size": null,
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Topology",
          "rek_author_id": 32023928,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Davidson, Robert",
          "rek_author_id": 32023929,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Babbage, John",
          "rek_author_id": 32023930,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "The Brodsky Quartet",
          "rek_author_id": 32023931,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
      ],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_affiliation_type": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030542,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 79324,
          "rek_author_id_id": 32030543,
          "rek_author_id_lookup": "Robert Davidson",
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 78691,
          "rek_author_id_id": 32030544,
          "rek_author_id_lookup": "John Babbage",
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030545,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
      ],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_creator_contribution_statement": Array [
        Object {
          "rek_creator_contribution_statement": "Test statement",
          "rek_creator_contribution_statement_order": 1,
        },
        Object {
          "rek_creator_contribution_statement": "Missing",
          "rek_creator_contribution_statement_order": 2,
        },
        Object {
          "rek_creator_contribution_statement": "",
          "rek_creator_contribution_statement_order": 3,
        },
        Object {
          "rek_creator_contribution_statement": "Missing",
          "rek_creator_contribution_statement_order": 4,
        },
      ],
      "fez_record_search_key_file_attachment_name": Array [
        Object {
          "rek_file_attachment_name": "ERAUQ352045_il_Sogno.mp3",
          "rek_file_attachment_name_id": 4434701,
          "rek_file_attachment_name_order": 1,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_NewLaceSleeves.mp3",
          "rek_file_attachment_name_id": 4434702,
          "rek_file_attachment_name_order": 2,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_ThreeMenAndABlonde.mp3",
          "rek_file_attachment_name_id": 4434703,
          "rek_file_attachment_name_order": 3,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_VagueMemories.mp3",
          "rek_file_attachment_name_id": 4434704,
          "rek_file_attachment_name_order": 4,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_il_Sogno.mp3.xml",
          "rek_file_attachment_name_id": 4434705,
          "rek_file_attachment_name_order": 5,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_NewLaceSleeves.mp3.xml",
          "rek_file_attachment_name_id": 4434706,
          "rek_file_attachment_name_order": 6,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_ThreeMenAndABlonde.mp3.xml",
          "rek_file_attachment_name_id": 4434707,
          "rek_file_attachment_name_order": 7,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_VagueMemories.mp3.xml",
          "rek_file_attachment_name_id": 4434708,
          "rek_file_attachment_name_order": 8,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_HCA15UQ352045_press.pdf.xml",
          "rek_file_attachment_name_id": 4434709,
          "rek_file_attachment_name_order": 9,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_UQ_352045.xml",
          "rek_file_attachment_name_id": 4434710,
          "rek_file_attachment_name_order": 10,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "HCA15UQ352045_press.pdf",
          "rek_file_attachment_name_id": 4434711,
          "rek_file_attachment_name_order": 11,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "presmd_HCA15UQ352045_press.xml",
          "rek_file_attachment_name_id": 4434712,
          "rek_file_attachment_name_order": 12,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_il_Sogno.flv",
          "rek_file_attachment_name_id": 4434713,
          "rek_file_attachment_name_order": 13,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "rek_file_attachment_name_id": 4434714,
          "rek_file_attachment_name_order": 14,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "rek_file_attachment_name_id": 4434715,
          "rek_file_attachment_name_order": 15,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_VagueMemories.flv",
          "rek_file_attachment_name_id": 4434716,
          "rek_file_attachment_name_order": 16,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
      ],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_agency_type": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_grant_type": Array [],
      "fez_record_search_key_language": Array [
        Object {
          "rek_language": "eng",
          "rek_language_id": 5577361,
          "rek_language_order": 1,
          "rek_language_pid": "UQ:352045",
          "rek_language_xsdmf_id": 11997,
        },
      ],
      "fez_record_search_key_series": Object {
        "rek_series": "Queensland Music Festival",
        "rek_series_id": 218537,
        "rek_series_pid": "UQ:352045",
        "rek_series_xsdmf_id": 12113,
      },
      "fez_record_search_key_significance": Array [
        Object {
          "rek_significance": 454026,
          "rek_significance_order": 1,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 2,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 3,
        },
        Object {
          "rek_significance": 0,
          "rek_significance_order": 4,
        },
      ],
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "1 musical performance",
        "rek_total_pages_id": 5822992,
        "rek_total_pages_pid": "UQ:352045",
        "rek_total_pages_xsdmf_id": 11992,
      },
      "rek_created_date": "2015-02-20T14:26:25Z",
      "rek_date": "2013-07-18T00:00:00Z",
      "rek_depositor": 8058,
      "rek_depositor_affiliation": 826,
      "rek_description": null,
      "rek_display_type": 313,
      "rek_display_type_lookup": "Creative Work",
      "rek_formatted_abstract": "Curated and directed by Robert Davidson, this concert is a collaboration by London's Brodsky Quartet and the Australian quintet Topology, focusing on Davidson's rescoring of Elvis Costello's ballet \\"Il Sogno \\" and arrangements of Elvis Costello songs, along with new works by Robert Davidson, John Babbage, Andrew Ford and Bernard Hoey.<br /><br /> The collaboration was intensive and thoroughgoing, and was used as the basis of a study, published in Davidson, \\"Collaborating across musical style boundaries \\" in Barrett (ed), Collaborative Creative Thought and Practice in Music, Ashgate, 2014.<br />",
      "rek_formatted_title": null,
      "rek_object_type": 3,
      "rek_pid": "UQ:352045",
      "rek_subtype": "Live Performance of Creative Work - Music",
      "rek_title": "Il Sogno: Topology and the Brodsky Quartet play Elvis Costello",
      "rek_updated_date": "2019-02-16T01:44:50Z",
      "rek_updated_date_xsdmf_id": 3678,
    }
  }
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should load initial values for admin author and if search key is not there then it should get default 1`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": true,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 79324,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  initialValues={Object {}}
  isAuthorLinked={true}
  isNtro={false}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={Object {}}
  recordToFix={null}
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should load initial values for admin author and if search key is not there then it should get default 2`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": true,
    }
  }
  accountAuthorLoading={false}
  actions={Object {}}
  author={
    Object {
      "aut_id": 79324,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  hasAnyFiles={true}
  initialValues={
    Object {
      "authorsAffiliation": Array [
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "Topology",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "0",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": false,
          "nameAsPublished": "Davidson, Robert",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "79324",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": true,
          "nameAsPublished": "Babbage, John",
          "orgaff": "",
          "orgtype": "",
          "required": false,
          "uqIdentifier": "78691",
        },
        Object {
          "affiliation": "NotUQ",
          "creatorRole": "",
          "disabled": 0,
          "nameAsPublished": "The Brodsky Quartet",
          "orgaff": "",
          "orgtype": "",
          "required": true,
          "uqIdentifier": "0",
        },
      ],
      "grants": Array [],
      "initialContributionStatements": Array [],
      "initialSignificance": Array [],
      "languages": Array [
        "eng",
      ],
    }
  }
  isAuthorLinked={true}
  isNtro={true}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:111111",
      },
    }
  }
  ntroFieldProps={
    Object {
      "hideAbstract": false,
      "hideAudienceSize": false,
      "hideExtent": false,
      "hideLanguage": false,
      "hidePeerReviewActivity": false,
      "showContributionStatement": true,
      "showSignificance": true,
    }
  }
  recordToFix={
    Object {
      "fez_datastream_info": Array [
        Object {
          "dsi_dsid": "Testing.pdf",
          "dsi_label": "Hello there",
          "dsi_state": "A",
        },
      ],
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_audience_size": null,
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Topology",
          "rek_author_id": 32023928,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Davidson, Robert",
          "rek_author_id": 32023929,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "Babbage, John",
          "rek_author_id": 32023930,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
        Object {
          "rek_author": "The Brodsky Quartet",
          "rek_author_id": 32023931,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:352045",
          "rek_author_xsdmf_id": 11960,
        },
      ],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_affiliation_type": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030542,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 79324,
          "rek_author_id_id": 32030543,
          "rek_author_id_lookup": "Robert Davidson",
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 78691,
          "rek_author_id_id": 32030544,
          "rek_author_id_lookup": "John Babbage",
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 32030545,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:352045",
          "rek_author_id_xsdmf_id": 11955,
        },
      ],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_file_attachment_name": Array [
        Object {
          "rek_file_attachment_name": "ERAUQ352045_il_Sogno.mp3",
          "rek_file_attachment_name_id": 4434701,
          "rek_file_attachment_name_order": 1,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_NewLaceSleeves.mp3",
          "rek_file_attachment_name_id": 4434702,
          "rek_file_attachment_name_order": 2,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_ThreeMenAndABlonde.mp3",
          "rek_file_attachment_name_id": 4434703,
          "rek_file_attachment_name_order": 3,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "ERAUQ352045_VagueMemories.mp3",
          "rek_file_attachment_name_id": 4434704,
          "rek_file_attachment_name_order": 4,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_il_Sogno.mp3.xml",
          "rek_file_attachment_name_id": 4434705,
          "rek_file_attachment_name_order": 5,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_NewLaceSleeves.mp3.xml",
          "rek_file_attachment_name_id": 4434706,
          "rek_file_attachment_name_order": 6,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_ThreeMenAndABlonde.mp3.xml",
          "rek_file_attachment_name_id": 4434707,
          "rek_file_attachment_name_order": 7,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_ERAUQ352045_VagueMemories.mp3.xml",
          "rek_file_attachment_name_id": 4434708,
          "rek_file_attachment_name_order": 8,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_HCA15UQ352045_press.pdf.xml",
          "rek_file_attachment_name_id": 4434709,
          "rek_file_attachment_name_order": 9,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "FezACML_UQ_352045.xml",
          "rek_file_attachment_name_id": 4434710,
          "rek_file_attachment_name_order": 10,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "HCA15UQ352045_press.pdf",
          "rek_file_attachment_name_id": 4434711,
          "rek_file_attachment_name_order": 11,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "presmd_HCA15UQ352045_press.xml",
          "rek_file_attachment_name_id": 4434712,
          "rek_file_attachment_name_order": 12,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_il_Sogno.flv",
          "rek_file_attachment_name_id": 4434713,
          "rek_file_attachment_name_order": 13,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_NewLaceSleeves.flv",
          "rek_file_attachment_name_id": 4434714,
          "rek_file_attachment_name_order": 14,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_ThreeMenAndABlonde.flv",
          "rek_file_attachment_name_id": 4434715,
          "rek_file_attachment_name_order": 15,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
        Object {
          "rek_file_attachment_name": "stream_ERAUQ352045_VagueMemories.flv",
          "rek_file_attachment_name_id": 4434716,
          "rek_file_attachment_name_order": 16,
          "rek_file_attachment_name_pid": "UQ:352045",
          "rek_file_attachment_name_xsdmf_id": 12088,
        },
      ],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_agency_type": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_grant_type": Array [],
      "fez_record_search_key_series": Object {
        "rek_series": "Queensland Music Festival",
        "rek_series_id": 218537,
        "rek_series_pid": "UQ:352045",
        "rek_series_xsdmf_id": 12113,
      },
      "fez_record_search_key_start_page": null,
      "rek_created_date": "2015-02-20T14:26:25Z",
      "rek_date": "2013-07-18T00:00:00Z",
      "rek_depositor": 8058,
      "rek_depositor_affiliation": 826,
      "rek_description": null,
      "rek_display_type": 313,
      "rek_display_type_lookup": "Creative Work",
      "rek_formatted_title": null,
      "rek_object_type": 3,
      "rek_pid": "UQ:352045",
      "rek_subtype": "Live Performance of Creative Work - Music",
      "rek_title": "Il Sogno: Topology and the Brodsky Quartet play Elvis Costello",
      "rek_updated_date": "2019-02-16T01:44:50Z",
      "rek_updated_date_xsdmf_id": 3678,
    }
  }
  submitSucceeded={false}
/>
`;

exports[`MyIncompleteRecord Container should run componentDidMount() life cycle method to load record to fix 1`] = `
<ConfirmDiscardFormChanges
  account={
    Object {
      "canMasquerade": false,
    }
  }
  accountAuthorLoading={false}
  actions={
    Object {
      "loadRecordToFix": [MockFunction] {
        "calls": Array [
          Array [
            "UQ:123456",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  author={
    Object {
      "aut_id": 410,
    }
  }
  dirty={false}
  disableInitialGrants={true}
  initialValues={Object {}}
  isAuthorLinked={true}
  isNtro={false}
  loadingRecordToFix={false}
  match={
    Object {
      "params": Object {
        "pid": "UQ:123456",
      },
    }
  }
  ntroFieldProps={Object {}}
  recordToFix={null}
  submitSucceeded={false}
/>
`;
